# YAEPv2

./: .gitignore  PHASE9_HARDENING_CHECKLIST.md  PI-Template-Field-Reference.md  README.md  TAURI_SVELTEKIT_REBUILD_SPEC.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.cursor/rules/: command-approval-only.mdc  components-ui-readonly.mdc  create-commit.mdc  no-emojis.mdc  pnpm-only.mdc  shadcn-ui.mdc  sveltekit-frontend-patterns.mdc  sveltekit.mdc  tauri-rust-backend.mdc  tauri-svelte-migration-context.mdc  tauri-windows-security.mdc
.github/: dependabot.yml
.github/workflows/: release.yml  security-hygiene.yml
src/: app.css  app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  thumbnail-overlay.json  widget-overlay.json
src-tauri/icons/: icon.icns
src-tauri/sql/: bootstrap.sql  eve_sde.sql  mumble_and_groups.sql  mumble_folders.sql
src-tauri/src/: db.rs  diag.rs  dwm.rs  error.rs  eve_chat_log_service.rs  eve_preview_windows.rs  eve_profile_tools.rs  eve_sde.rs  eve_static_data.rs  global_hotkeys.rs  hotkeys.rs  instance_guard.rs  lib.rs  main.rs  main_thread.rs  models.rs  monitors.rs  settings_backup.rs  thumbnail_service.rs  thumbnail_webview_overlay.rs  widget_overlay.rs  widget_service.rs  windows.rs
src-tauri/src/dwm/: imp.rs  mod.rs  stub.rs
src/lib/client-grouping/: client-grouping-helpers.ts
src/lib/components/: theme-toggle.svelte
src/lib/components/client-grouping/: client-group-card.svelte  client-group-create-dialog.svelte  client-group-hotkeys.ts
src/lib/components/eve-profiles/: eve-profile-copy-dialog.svelte  eve-profile-copy-settings-dialog.svelte  eve-profile-delete-dialog.svelte  eve-profiles-detected-table.svelte  eve-profiles-server-toolbar.svelte
src/lib/components/profiles/: profile-hotkeys.ts  (+2 more)
src/lib/datetime/: format-yyyy-mm-dd.ts
src/lib/eve-profiles/: eve-server-helpers.ts
src/lib/grid-layout/: thumbnail-layout-bounds.ts
src/lib/models/: domain.ts
src/lib/mumble/: folder-icon-keys.ts  mumble-folder-icon.svelte
src/lib/pi-template/: isk-format.ts  pi-template-page.types.ts  template-to-flow.ts
src/lib/services/: backend.ts  widgets.ts
src/lib/thumbnail/: thumbnail-setting-validation.ts
src/lib/utils/: mumble-display-order.test.ts  mumble-display-order.ts  mumble-display.test.ts  mumble-display.ts  mumble-url.test.ts  mumble-url.ts
src/routes/: +layout.svelte  +page.svelte  home-page.test.ts
src/routes/client-grouping/: +page.svelte  client-grouping-page.test.ts
src/routes/eve-profiles/: +page.svelte  eve-profiles-page.test.ts
src/routes/grid-layout/: +page.svelte  grid-layout-helpers.test.ts  grid-layout-helpers.ts  grid-layout-page.test.ts
src/routes/mumble-links/: +page.svelte  mumble-folder-block.svelte  mumble-folder-draft-panel.svelte  mumble-link-draft-panel.svelte  mumble-link-row.svelte  mumble-links-context.ts  mumble-links-controller.svelte.ts  mumble-links-delete-dialog.svelte  mumble-links-page.test.ts  mumble-links-styles.ts  mumble-links-tree.svelte
src/routes/pi-templates/: +page.svelte
src/routes/process-management/: +page.svelte  process-management-page.test.ts
src/routes/profiles/: +page.svelte  profiles-page.test.ts
src/routes/settings/: +page.svelte  settings-page.test.ts
src/routes/thumbnail-overlay/: +layout.svelte  +page.svelte  overlay-surface.css  thumbnail-overlay-page.test.ts
src/routes/thumbnail-settings/: +page.svelte  thumbnail-settings-page.test.ts
src/routes/widget-overlay/: +layout.svelte  +layout.ts  +page.svelte
(+44 files in other folders)
