[package]
name = "yaep-rust"
version = "0.1.0"
description = "YAEP rebuild in Tauri + SvelteKit"
edition = "2021"

[lib]
name = "yaep_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading"
] }
