[package]
name = "yaep-rust"
version = "0.1.0"
description = "YAEP rebuild in Tauri + SvelteKit"
edition = "2021"

[lib]
name = "yaep_rust_lib"
# rlib only for the Tauri binary: avoids a separate cdylib with duplicate statics (hooks, CAPTURE).
# Add staticlib/cdylib when building for iOS/Android if needed.
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.23", features = ["v4"] }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
opener = "0.7"
ureq = { version = "2.12", default-features = false, features = ["json"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading"
] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
zip = "0.6"
